// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`altGalleryResponse > renders one image-first embed per printing 1`] = `
{
  "data": {
    "content": "**Analog Youth** \`EX1-066\` — 3 printings",
    "embeds": [
      {
        "color": 15001579,
        "footer": {
          "text": "EX-01: Theme Booster Classic Collection",
        },
        "image": {
          "url": "https://example.com/EX1-066.webp",
        },
        "title": "Analog Youth — EX1-066 · base printing",
      },
      {
        "color": 15001579,
        "footer": {
          "text": "EX-01: Theme Booster Classic Collection",
        },
        "image": {
          "url": "https://example.com/EX1-066_P1.webp",
        },
        "title": "Analog Youth — EX1-066 · alt-art P1",
      },
      {
        "color": 15001579,
        "footer": {
          "text": "EX-01: Theme Booster Classic Collection",
        },
        "image": {
          "url": "https://example.com/EX1-066_P2.webp",
        },
        "title": "Analog Youth — EX1-066 · alt-art P2",
      },
    ],
  },
  "type": 4,
}
`;

exports[`banlistResponse > answers gracefully when nothing is restricted 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "description": "No cards are currently banned or restricted.",
        "footer": {
          "text": "Official list: en.digimoncard.com/rule/restriction_card",
        },
        "title": "Banned & Restricted Cards",
        "url": "https://en.digimoncard.com/rule/restriction_card/",
      },
    ],
  },
  "type": 4,
}
`;

exports[`banlistResponse > groups the list into Banned / Restricted / Choice sections, related cards named 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "description": "**Banned**
• **Matt Ishida** \`BT2-090\`

**Restricted to 1** — at most one copy per deck
• **Argomon** \`BT2-089\`

**Choice restriction** — decks with this card cannot include the related cards
• **Taomon** \`BT17-035\` — with Chaosmon: Valdur Arm (BT20-037)
• **Chaosmon: Valdur Arm** \`BT20-037\` — with Taomon (BT17-035) or Sakuyamon (X Antibody) (EX8-037)
• **Mother D-Reaper** \`EX2-007\` — with Shoto Kazama (EX7-064)
• **Shoto Kazama** \`EX7-064\` — with Mother D-Reaper (EX2-007)
• **Sakuyamon (X Antibody)** \`EX8-037\` — with Chaosmon: Valdur Arm (BT20-037)",
        "footer": {
          "text": "Official list: en.digimoncard.com/rule/restriction_card",
        },
        "title": "Banned & Restricted Cards",
        "url": "https://en.digimoncard.com/rule/restriction_card/",
      },
    ],
  },
  "type": 4,
}
`;

exports[`banlistResponse > surfaces an unknown future status as its own raw section 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "description": "**Quantum Banned**
• **Quantum Digimon** \`BT9-099\`",
        "footer": {
          "text": "Official list: en.digimoncard.com/rule/restriction_card",
        },
        "title": "Banned & Restricted Cards",
        "url": "https://en.digimoncard.com/rule/restriction_card/",
      },
    ],
  },
  "type": 4,
}
`;

exports[`cardResponse > flags a banned card in the description line 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 14697818,
        "description": "⚠️ **Banned**",
        "footer": {
          "text": "BOOSTER BLAST ACE [BT-14]",
        },
        "image": {
          "url": "https://example.com/BT14-018.webp",
        },
        "title": "Goldramon — BT14-018",
      },
    ],
  },
  "type": 4,
}
`;

exports[`cardResponse > flags a restricted card in the description line 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 14697818,
        "description": "⚠️ **Restricted to 1** — decks may include at most one copy",
        "footer": {
          "text": "BOOSTER BLAST ACE [BT-14]",
        },
        "image": {
          "url": "https://example.com/BT14-018.webp",
        },
        "title": "Goldramon — BT14-018",
      },
    ],
  },
  "type": 4,
}
`;

exports[`cardResponse > names the conflicting card ids for a mapped choice-restricted card 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 14697818,
        "description": "⚠️ **Choice restriction** — cannot be in a deck with BT17-035 or EX8-037",
        "footer": {
          "text": "BOOSTER BLAST ACE [BT-14]",
        },
        "image": {
          "url": "https://example.com/BT14-018.webp",
        },
        "title": "Chaosmon: Valdur Arm — BT20-037",
      },
    ],
  },
  "type": 4,
}
`;

exports[`cardResponse > renders image-first: title, accent color, image, set footer — no stat fields 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 14697818,
        "footer": {
          "text": "BOOSTER BLAST ACE [BT-14]",
        },
        "image": {
          "url": "https://example.com/BT14-018.webp",
        },
        "title": "Goldramon — BT14-018",
      },
    ],
  },
  "type": 4,
}
`;

exports[`cardResponse > tags the variant in an alt-art title 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 15001579,
        "footer": {
          "text": "EX-01: Theme Booster Classic Collection",
        },
        "image": {
          "url": "https://example.com/EX1-066_P1.webp",
        },
        "title": "Analog Youth — EX1-066 (P1)",
      },
    ],
  },
  "type": 4,
}
`;

exports[`disambiguationResponse > lists matches ephemerally with IDs to retry with 1`] = `
{
  "data": {
    "content": "Found 3 cards matching **goldramon** — run the command again with one of these IDs:
• **Goldramon** \`BT14-018\` — BOOSTER BLAST ACE [BT-14]
• **Goldramon** \`EX3-035\` — EX-03
• **Goldramon (X Antibody)** \`BT16-014\` — BOOSTER BLAST ACE [BT-14]",
    "flags": 64,
  },
  "type": 4,
}
`;

exports[`notFoundResponse > is friendly, ephemeral, and suggests next steps 1`] = `
{
  "data": {
    "content": "No cards found matching **zzzznotacard**. Try the autocomplete suggestions, or search by card ID (like \`EX1-066\`).",
    "flags": 64,
  },
  "type": 4,
}
`;

exports[`releaseResponse > renders a month-precision announcement date 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "fields": [
          {
            "inline": true,
            "name": "Product",
            "value": "Limited Card Pack",
          },
          {
            "inline": true,
            "name": "English release",
            "value": "Releases November 2026",
          },
          {
            "inline": true,
            "name": "In my card data",
            "value": "Nothing yet — not out!",
          },
        ],
        "footer": {
          "text": "Digimon Card Game set",
        },
        "title": "LM-09 — Distancia Cero",
      },
    ],
  },
  "type": 4,
}
`;

exports[`releaseResponse > renders a released set with its live tally 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "fields": [
          {
            "inline": true,
            "name": "Product",
            "value": "Booster",
          },
          {
            "inline": true,
            "name": "English release",
            "value": "Released November 17, 2023",
          },
          {
            "inline": true,
            "name": "In my card data",
            "value": "104 cards · 118 printings",
          },
        ],
        "footer": {
          "text": "Digimon Card Game set",
        },
        "title": "BT-14 — Blast Ace",
      },
    ],
  },
  "type": 4,
}
`;

exports[`releaseResponse > renders an upcoming set: future phrasing, no cards yet 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "fields": [
          {
            "inline": true,
            "name": "Product",
            "value": "Booster",
          },
          {
            "inline": true,
            "name": "English release",
            "value": "Releases September 4, 2026",
          },
          {
            "inline": true,
            "name": "In my card data",
            "value": "Nothing yet — not out!",
          },
        ],
        "footer": {
          "text": "Digimon Card Game set",
        },
        "title": "BT-26 — Timeless Bonds",
      },
    ],
  },
  "type": 4,
}
`;

exports[`upcomingReleasesResponse > answers gracefully when nothing is upcoming 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "description": "No upcoming sets in my release data right now — new Bandai announcements land here as they're added.",
        "footer": {
          "text": "English release dates · YYYY-MM = announced month",
        },
        "title": "Upcoming Releases",
      },
    ],
  },
  "type": 4,
}
`;

exports[`upcomingReleasesResponse > lists only future sets, soonest first, mixing day and month precision 1`] = `
{
  "data": {
    "embeds": [
      {
        "color": 10070709,
        "description": "• **Final Crest** (LM-08) — August 2026
• **Timeless Bonds** (BT-26) — September 4, 2026
• **Distancia Cero** (LM-09) — November 2026",
        "footer": {
          "text": "English release dates · YYYY-MM = announced month",
        },
        "title": "Upcoming Releases",
      },
    ],
  },
  "type": 4,
}
`;
